--- a/css/item.css
+++ b/css/item.css
@@ -1,13 +1,40 @@
 .item {
-    width: 300px;
+    transform: scale(1);
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    width: auto;
+    box-shadow: #bbbbbbbb 0 20px 30px 0;
+    text-decoration: none;
+    overflow-x: hidden;
+
+    display: flex;
+    flex-direction: column;
+
+    transition: transform .25s;
+    -moz-transition: transform .25s;
+}
+
+.item:hover, .item:focus {
+    transform: scale(1.1);
+    z-index: 1;
 }
 
 .item > .preview-wrapper {
-    width: 300px;
-    height: 300px;
+    position: relative;
+    width: 100%;
+}
+
+.item > .preview-wrapper::before {
+    content: "";
+    display: block;
+    padding-top: 100%;
 }
 
 .item > .preview-wrapper > .preview {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -15,18 +42,22 @@
 
 .item > .info-wrapper {
     color: black;
-    text-decoration: none;
     width: 100%;
     overflow-x: hidden;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .item > .info-wrapper > h1 {
+    margin-bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .item > .info-wrapper > h2 {
+    margin-bottom: 0;
     white-space: nowrap;
     mask-image: linear-gradient(to right, rgba(0,0,0,1) 75%, rgba(0,0,0,0));
 }
